Issue #433: Fix all localization issues
* enable PDE compiler check for missing localizations in all projects
* unify PDE project settings for all plugin projects
* fix missing tooltip
* localize all remaining non-localized strings in plugin.xml
* set translatable property in all own schemas where applicable
* move all localization files to the default OSGi localization property
location and remove the superfluous manifest headers

--- a/net.sf.eclipsecs.branding/build.properties
+++ b/net.sf.eclipsecs.branding/build.properties
@@ -1,4 +1,5 @@
 bin.includes = META-INF/,\
                about.ini,\
                about.properties,\
-               checkstyle_small.png
+               checkstyle_small.png,\
+               OSGI-INF/
