--- a/net.sf.eclipsecs.core/build.properties
+++ b/net.sf.eclipsecs.core/build.properties
@@ -6,8 +6,6 @@ bin.includes = .,\
                license/,\
                plugin.xml,\
                schema/,\
-               core.properties,\
-               lib/checkstyle-10.6.0-all.jar
-               
+               lib/checkstyle-10.6.0-all.jar,\
+               OSGI-INF/
 javacDefaultEncoding.. = UTF-8
-
