--- a/net.sf.eclipsecs.doc/build.properties
+++ b/net.sf.eclipsecs.doc/build.properties
@@ -1,5 +1,6 @@
 bin.includes = META-INF/,\
                docs/,\
                toc.xml,\
-               plugin.xml
+               plugin.xml,\
+               OSGI-INF/
 generateSourceBundle=false               
