--- a/net.sf.eclipsecs.sample/build.properties
+++ b/net.sf.eclipsecs.sample/build.properties
@@ -3,4 +3,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                sample_checks.xml,\
-               java.header
+               java.header,\
+               OSGI-INF/
+javacDefaultEncoding.. = UTF-8
