--- a/net.sf.eclipsecs.checkstyle/build.properties
+++ b/net.sf.eclipsecs.checkstyle/build.properties
@@ -1,7 +1,8 @@
 bin.includes = META-INF/,\
                .,\
                license/,\
-               checkstyle-10.6.0-all.jar
+               checkstyle-10.6.0-all.jar,\
+               OSGI-INF/
 jars.compile.order = .
 source.. = metadata/
 javacDefaultEncoding.. = UTF-8
