--- a/net.sf.eclipsecs.ui/build.properties
+++ b/net.sf.eclipsecs.ui/build.properties
@@ -3,8 +3,8 @@ bin.includes = icons/,\
                plugin.xml,\
                schema/,\
                META-INF/,\
-               plugin.properties,\
-               .
+               .,\
+               OSGI-INF/
 jars.compile.order = .
 source.. = src/
 additional.bundles = org.eclipse.jdt.core,\
