Improve preference export description
* use better icon
* add description
* use Eclipse terms

Also remove invalid Javadoc part of preference page.

--- a/net.sf.eclipsecs.ui/plugin.xml
+++ b/net.sf.eclipsecs.ui/plugin.xml
@@ -72,12 +72,15 @@
         <transfer
               id="net.sf.eclipsecs.ui.transfer"
               name="%CheckstylePreferenceTransfer.name"
-              icon="icons/checkstyle_error.gif">
+              icon="icons/checkstyle_command.png">
            <mapping
                  scope="instance" >
                  <entry node="net.sf.eclipsecs.core"/>
                  <entry node="net.sf.eclipsecs.ui"/>
            </mapping>
+           <description>
+              %CheckstylePreferenceTransfer.description
+           </description>
         </transfer>
         <settingsTransfer
             id="net.sf.eclipsecs.settings"
