--- a/net.sf.eclipsecs.doc/src/main/resources/releases.json
+++ b/net.sf.eclipsecs.doc/src/main/resources/releases.json
@@ -1,5 +1,10 @@
 [
   {
+    "version": "Release 10.9.3",
+    "template": "partials/releases/10.9.3/release_notes.html",
+    "open": true
+  },
+  {
     "version": "Release 10.9.2",
     "template": "partials/releases/10.9.2/release_notes.html",
     "open": true
