--- a/net.sf.eclipsecs.checkstyle/.settings/org.eclipse.jdt.ui.prefs
+++ b/net.sf.eclipsecs.checkstyle/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 formatter_profile=_Checkstyle
-formatter_settings_version=13
+formatter_settings_version=23
+org.eclipse.jdt.ui.text.custom_code_templates=
