Register quickfixes via extension point
* Remove old quickfixprovider extension point. It's entirely useless to
register an OSGi plugin as extender of another plugin. OSGi will deal
with that kind of class loading anyway.
* Instead have a new quickfix extension point, which registers a class
implementing the quickfix related interface and the module that can be
fixed this way.
* Completely avoids loading Checkstyle metadata for looking up
quickfixes of existing problem markers.
* Fix ExplicitInitializationQuickfix throwing exceptions during the
check whether it's applicable.

Fixes #315.
Fixes #561.

--- a/net.sf.eclipsecs.sample/plugin.xml
+++ b/net.sf.eclipsecs.sample/plugin.xml
@@ -7,11 +7,6 @@
           point="net.sf.eclipsecs.core.checkstyleAddonProvider">
     </extension>
 
-    <!-- This plugin provides custom quickfixes for Checkstyle problems. -->
-    <extension
-          point="net.sf.eclipsecs.ui.checkstyleQuickfixProvider">
-    </extension>
-
     <!--
         Sample builtin check configuration
     -->
@@ -38,5 +33,12 @@
             internal-name="SampleFilter"
             description="%filter.description"
             class="net.sf.eclipsecs.sample.filter.SampleFilter"/>
+    </extension>
+
+    <extension
+          point="net.sf.eclipsecs.ui.quickfix">
+       <quickfix
+             module="MethodLimit"
+             class="net.sf.eclipsecs.sample.checks.MethodLimitQuickfix"></quickfix>
     </extension>
 </plugin>
