enable project specific naming rules
If we check that exceptions have at least the name "ex", not "e", then
we should also generate them that way.

--- a/net.sf.eclipsecs.checkstyle/.settings/org.eclipse.jdt.ui.prefs
+++ b/net.sf.eclipsecs.checkstyle/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,9 @@
 eclipse.preferences.version=1
 formatter_profile=_Checkstyle
 formatter_settings_version=23
+org.eclipse.jdt.ui.exception.name=ex
+org.eclipse.jdt.ui.gettersetter.use.is=true
+org.eclipse.jdt.ui.javadoc=true
+org.eclipse.jdt.ui.keywordthis=false
+org.eclipse.jdt.ui.overrideannotation=true
 org.eclipse.jdt.ui.text.custom_code_templates=
