Online help for problem markers
* Register a problem marker help provider.
* Calculate a context help topic for each marker and dynamically forward
it to the original online help of the related check.

For the end user, pressing F1 on a marker has the result of opening the
integrated Eclipse help and showing the checkstyle problem description
online.

Fixes #568.

--- a/net.sf.eclipsecs.ui/plugin.xml
+++ b/net.sf.eclipsecs.ui/plugin.xml
@@ -610,5 +610,18 @@
              module="UpperEllCheck"
              class="net.sf.eclipsecs.ui.quickfixes.misc.UpperEllQuickfix">
        </quickfix>
+   </extension>
+   <extension
+          point="org.eclipse.ui.ide.markerHelp">
+       <markerHelp
+             helpContextProvider="net.sf.eclipsecs.ui.quickfixes.MarkerHelpContextProvider"
+             markerType="net.sf.eclipsecs.core.CheckstyleMarker"
+             matchChildren="false"></markerHelp>
+    </extension>
+    <extension
+          point="org.eclipse.help.contexts">
+       <contextProvider
+             class="net.sf.eclipsecs.ui.quickfixes.MarkerHelpContextProvider">
+       </contextProvider>
     </extension>
 </plugin>
