infra: convert assertions to AssertJ
Tests are way more readable and specific with AssertJ assertions.

* add assertj and dependencies to target
* add assertj as compile time dependency, so it doesn't become part of
the released plugin
* use IllegalImport to avoid plain JUnit assertions

--- a/net.sf.eclipsecs.checkstyle/build.properties
+++ b/net.sf.eclipsecs.checkstyle/build.properties
@@ -6,3 +6,5 @@ bin.includes = META-INF/,\
 jars.compile.order = .
 source.. = metadata/
 javacDefaultEncoding.. = UTF-8
+additional.bundles = assertj-core,\
+                     net.bytebuddy.byte-buddy
