--- a/net.sf.eclipsecs.ui/build.properties
+++ b/net.sf.eclipsecs.ui/build.properties
@@ -8,5 +8,6 @@ bin.includes = icons/,\
 jars.compile.order = .
 source.. = src/
 additional.bundles = org.eclipse.jdt.core,\
-                     org.eclipse.core.runtime
+                     org.eclipse.core.runtime,\
+                     assertj-core
 javacDefaultEncoding.. = UTF-8
