cleanup bundle relations
* Remove additional.bundles from build.properties (except for testing
dependencies). Those are NOT meant for hiding runtime dependencies, but
just development time and testing dependencies.
* Make e4 dependency non-optional. Our minimum target platform always
contains e4.
* Make team provider dependency non-optional. The way the Eclipse CS
code is written, those are required (we would have to defer class
loading if this were an actual optional dependency).
* Add org.eclipse.help dependency to doc bundle. That bundle provides
the help extension and therefore also should depend on the help system.
* remove build property which is only relevant for PDE export. We build
with Tycho.

--- a/net.sf.eclipsecs.ui/build.properties
+++ b/net.sf.eclipsecs.ui/build.properties
@@ -7,7 +7,5 @@ bin.includes = icons/,\
                OSGI-INF/
 jars.compile.order = .
 source.. = src/
-additional.bundles = org.eclipse.jdt.core,\
-                     org.eclipse.core.runtime,\
-                     assertj-core
+additional.bundles = assertj-core
 javacDefaultEncoding.. = UTF-8
